MatrixRotation: add Youtube link, adjust tests